enable PostGIS for spartial support